[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "licensed-inference"
version = "0.1.0"
description = "Protocol-level self-check & gating: LICENSED / NOT_LICENSED / UNDEFINED (minimal executable instance)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = ["numpy>=1.24"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
